<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- HEADER start -->
    <ImageView
        android:id="@+id/battery_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/batteryIconContentDescription"
        android:labelFor="@+id/battery_text"
        android:src="@drawable/ic_battery_std_black_18dp" />

    <TextView
        android:id="@+id/battery_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/battery_icon"
        android:layout_toEndOf="@+id/battery_icon"
        android:layout_toRightOf="@+id/battery_icon"
        android:gravity="end"
        android:text="@string/battery_text"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/linkQuality_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/battery_icon"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_toEndOf="@+id/battery_text"
        android:layout_toRightOf="@+id/battery_text"
        android:contentDescription="@string/linkQualityIconContentDescription"
        android:labelFor="@+id/linkQuality_text"
        android:src="@drawable/ic_wifi_tethering_black_18dp" />

    <TextView
        android:id="@+id/linkQuality_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linkQuality_icon"
        android:layout_toEndOf="@+id/linkQuality_icon"
        android:layout_toRightOf="@+id/linkQuality_icon"
        android:gravity="end"
        android:text="@string/linkQuality_text"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <ImageButton
        android:id="@+id/imageButton_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/imageButton_settings"
        android:layout_toLeftOf="@+id/imageButton_settings"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/menu_connect_ContentDescription"
        android:elevation="2dp"
        android:src="@drawable/ic_action_import_export" />

    <ImageButton
        android:id="@+id/imageButton_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/menu_preferences_ContentDescription"
        android:elevation="2dp"
        android:src="@drawable/ic_action_settings_light" />

    <!-- HEADER end -->

    <ImageButton
        android:id="@+id/button_ledRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_headLight"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_toStartOf="@id/button_headLight"
        android:layout_toLeftOf="@id/button_headLight"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_ledring_contentDescription"
        android:elevation="2dp"
        android:onClick="switchLedRingEffect"
        android:src="@drawable/ic_led_ring"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_headLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_headlight_contentDescription"
        android:elevation="2dp"
        android:onClick="toggleHeadlight"
        android:src="@drawable/ic_headlight"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_buzzerSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_headLight"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_toEndOf="@id/button_headLight"
        android:layout_toRightOf="@id/button_headLight"
        android:background="@drawable/custom_button_action"
        android:contentDescription="@string/button_buzzer_contentDescription"
        android:elevation="2dp"
        android:onClick="playBuzzerSound"
        android:src="@drawable/ic_volume_up_black"
        android:visibility="gone" />

    <se.bitcraze.crazyfliecontrol2.FlightDataView
        android:id="@+id/flightdataview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp" />

    <ImageView
        android:id="@+id/video_view"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_below="@+id/flightdataview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:background="#000000"
        android:contentDescription="@string/video_content_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/video_status"
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:layout_alignLeft="@id/video_view"
        android:layout_alignRight="@id/video_view"
        android:layout_alignTop="@id/video_view"
        android:gravity="center"
        android:text="@string/video_waiting"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:visibility="gone" />

    <com.MobileAnarchy.Android.Widgets.Joystick.JoystickView
        android:id="@+id/joystick_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/flightdataview"
        android:layout_toStartOf="@+id/video_view"
        android:layout_toLeftOf="@+id/video_view"
        android:gravity="bottom" />

    <com.MobileAnarchy.Android.Widgets.Joystick.JoystickView
        android:id="@+id/joystick_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/flightdataview"
        android:layout_toEndOf="@+id/video_view"
        android:layout_toRightOf="@+id/video_view"
        android:gravity="bottom" />

    <ImageButton
        android:id="@+id/joystick_left_hlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/joystick_left"
        android:layout_alignStart="@id/joystick_left"
        android:layout_alignLeft="@id/joystick_left"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/custom_button_seledted"
        android:src="@drawable/ic_horizontal" />

    <TextView
        android:id="@+id/carefree_mode_toggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@id/joystick_left_hlock"
        android:layout_toEndOf="@id/joystick_left_hlock"
        android:layout_toRightOf="@id/joystick_left_hlock"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/custom_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/carefree_mode_short"
        android:textColor="#000000"
        android:textSize="10sp" />
</RelativeLayout>
